examples/valid/program6.c
int main(void) {
    int a;
    int b;
    int result;
    a = 15;
    b = 3;
    result = a / b;
    return result;
}

