examples/invalid/program71.c
int main(void) {
    int 2value;
    2value = 1;
    return 2value;
}


